# app/Models/Profile.php
@@ -2,10 +2,11 @@
 
 namespace App\Models;
 
+use App\Interfaces\PublisherInterface;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
-class Profile extends Model
+class Profile extends Model implements PublisherInterface
 {
     use HasFactory;
 
@@ -33,5 +34,22 @@ class Profile extends Model
 
     public function followed(){
         return $this->hasMany(Connect::class,'followed','username');
+    }
+
+    public function subscribers(){
+        return $this->hasMany(Subscriber::class,'username','username');
+    }
+
+    public function addSubscriber(string $username, string $subscriber)
+    {
+        Subscriber::create([
+            'username' => $username,
+            'subscriber' => auth()->user()->username
+        ]);
+    }
+
+    public function removeSubscriber(string $username, string $subscriber)
+    {
+        Subscriber::where('username',$username)->where('subscriber',$subscriber)->delete();
     }
 }
